; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-message.c_message_end_of_signature.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-bus/extr_bus-message.c_message_end_of_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bus_container = type { i64*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @message_end_of_signature to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @message_end_of_signature(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.bus_container*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @assert(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.bus_container* @message_get_last_container(i32* %6)
  store %struct.bus_container* %7, %struct.bus_container** %3, align 8
  %8 = load %struct.bus_container*, %struct.bus_container** %3, align 8
  %9 = getelementptr inbounds %struct.bus_container, %struct.bus_container* %8, i32 0, i32 0
  %10 = load i64*, i64** %9, align 8
  %11 = icmp ne i64* %10, null
  br i1 %11, label %12, label %22

12:                                               ; preds = %1
  %13 = load %struct.bus_container*, %struct.bus_container** %3, align 8
  %14 = getelementptr inbounds %struct.bus_container, %struct.bus_container* %13, i32 0, i32 0
  %15 = load i64*, i64** %14, align 8
  %16 = load %struct.bus_container*, %struct.bus_container** %3, align 8
  %17 = getelementptr inbounds %struct.bus_container, %struct.bus_container* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds i64, i64* %15, i64 %18
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %20, 0
  br label %22

22:                                               ; preds = %12, %1
  %23 = phi i1 [ true, %1 ], [ %21, %12 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i32 @assert(i32*) #1

declare dso_local %struct.bus_container* @message_get_last_container(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
